<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.work.vanya.notes.fragments.CreateNoteFrag"

    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/enter_text_big"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="12dp"
        />


     <EditText
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:id="@+id/edit_bigzagol"
         android:textColor="@color/black"
         android:layout_marginHorizontal="20dp"
         android:hint="@string/please_test_enter"
         />


     <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/enter_text_main"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="32dp"
        />


     <EditText
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:id="@+id/edit_maintext"
         android:textColor="@color/black"
         android:layout_marginHorizontal="20dp"
         android:hint="@string/please_test_enter"
         android:scrollbars="vertical"
         android:lines="20"
         android:minLines="3"
         android:gravity="start|top"
         />


    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/save_notes"
        android:id="@+id/id_save"
        />

</androidx.appcompat.widget.LinearLayoutCompat>