<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.work.vanya.notes.fragments.FragmentEdit"
    >



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@android:drawable/ic_menu_revert"
            android:id="@+id/back_main_frag"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center_vertical"
            />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_vertical|center_horizontal"
              android:gravity="center"
              android:text="@string/frag_edit"
              android:textStyle="bold"
              android:layout_marginEnd="30dp"
              android:textSize="18sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>




   <TextView
       android:layout_width="match_parent"
       android:layout_height="32dp"
       android:text="@string/zago"
       android:layout_gravity="center"
       android:gravity="center"
       android:textSize="18sp"
       android:layout_marginTop="20dp"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/cornder_edit"
        android:id="@+id/zagolo_edit"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        />


     <TextView
       android:layout_width="match_parent"
       android:layout_height="32dp"
       android:text="@string/main_t"
       android:layout_gravity="center"
       android:gravity="center"
       android:textSize="18sp"
       android:layout_marginTop="20dp"
       />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@drawable/cornder_edit"
        android:id="@+id/main_t_edit"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
         android:scrollbars="vertical"
         android:lines="20"
         android:minLines="3"
         android:gravity="start|top"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        >

        <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/red"
        android:text="@string/remove_note"
        android:layout_weight="0.5"
            android:id="@+id/remove_n"
        android:layout_gravity="center"
        android:gravity="center"
        />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/green"
            android:text="@string/save_edit_note"
            android:layout_weight="0.5"
            android:id="@+id/sabe_upda"
            android:layout_marginStart="6dp"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>